--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PILLAGERS",
-  "name": "PILLAGERS",
+  "short_name": "DAYC",
+  "name": "DAYC",
   "icons": [
     {
       "src": "favicon.ico",
