--- a/public/config/config.json
+++ b/public/config/config.json
@@ -1,16 +1,16 @@
 {
-  "CONTRACT_ADDRESS": "0x17F2fdD7E1Dae1368D1fC80116310F54F40f30a9",
-  "SCAN_LINK": "https://etherscan.io/address/0x17f2fdd7e1dae1368d1fc80116310f54f40f30a9",
+  "CONTRACT_ADDRESS": "0xAd0007c58011921D478B7B569C9C82E03df86915",
+  "SCAN_LINK": "https://etherscan.io/address/0xad0007c58011921d478b7b569c9c82e03df86915",
   "NETWORK": {
     "NAME": "Ethereum",
     "SYMBOL": "ETH",
     "ID": 1
   },
-  "NFT_NAME": "PILLAGERS",
-  "SYMBOL": "PILLAGERS",
-  "MAX_SUPPLY": 1,
+  "NFT_NAME": "DAYC",
+  "SYMBOL": "DAYC",
+  "MAX_SUPPLY": 6666,
   "WEI_COST": 0,
-  "DISPLAY_COST": 0.003,
+  "DISPLAY_COST": 0,
   "GAS_LIMIT": 120000,
   "MARKETPLACE": "",
   "MARKETPLACE_LINK": "",
