--- a/public/config/config.json
+++ b/public/config/config.json
@@ -9,8 +9,8 @@
   "NFT_NAME": "DAYC",
   "SYMBOL": "DAYC",
   "MAX_SUPPLY": 3666,
-  "WEI_COST": 0,
-  "DISPLAY_COST": 0,
+  "WEI_COST": 5000000000000000,
+  "DISPLAY_COST": 0.005,
   "GAS_LIMIT": 120000,
   "MARKETPLACE": "",
   "MARKETPLACE_LINK": "",
